--- a/public/about.html
+++ b/public/about.html
@@ -1,26 +1,42 @@
+
 <!-- @author Marius -->
+<!-- @author Atle -->
+ 
 <!DOCTYPE html>
 <html lang="no">
 <head>
-    <meta name ="viewport" content ="width=device-width, initial-scale=1">
+    <!-- Meta and title section -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>EatMeMaybe - About</title>
-    <link rel="icon" type="image/png" href="MEDIA/EatMeMaybeLogo1.png">
-    <link rel ="stylesheet" href ="CSS/mainview.css">
-    <link rel ="stylesheet" href ="CSS/about-content.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="MEDIA/EatMeMaybeLogo1.png">
+
+    <!-- CSS stylesheets -->
+    <link rel="stylesheet" href="CSS/mainview.css">
+    <link rel="stylesheet" href="CSS/about-content.css">
+
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+          integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+
+    <!-- Navigation bar with sidebar and header -->
     <nav>
+        <!-- Sidebar menu (mobile/tablet) -->
         <ul class="sidebar">
-        <li><a href="#" id="hide-sidebar-btn"></a>
-            <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
-                    <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
-                </svg>
-            </a>
-        </li>
+            <li>
+                <!-- Button to hide sidebar -->
+                <a href="#" id="hide-sidebar-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
+                        <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
+                    </svg>
+                </a>
+            </li>
+            <!-- Sidebar navigation links -->
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
@@ -29,23 +45,32 @@
             <li><button class="dropbtn" id="deleteButtonSidebar">Delete account</button></li>
             <li><button class="dropbtn" id="signOutButtonSidebar">Sign out</button></li>
         </ul>
+
+        <!-- Top navigation bar (desktop) -->
         <header>
+            <!-- Logo -->
             <ul class="logo">
                 <li><a href="index.html"><img src="MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
             </ul>
+
+            <!-- Navigation links -->
             <ul>
                 <li class="hideOnMobile"><a href="index.html">My Inventory</a></li>
                 <li class="hideOnMobile"><a href="products.html">Add Products</a></li>
                 <li class="hideOnMobile"><a href="about.html">About</a></li>
+
+                <!-- Dropdown menu for user account -->
                 <li class="dropdown">
                     <a href="#" class="dropbtn" onclick="dropdownFunction()">
+                        <!-- User icon -->
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
                             <path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 
                             0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 
                             59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 
                             156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q53 0 100-15.5t86-44.5q-39-29-86-44.5T480-280q-53 
                             0-100 15.5T294-220q39 29 86 44.5T480-160Zm0-360q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm0-60Zm0 360Z"/>
-                        </svg> <i class="fa fa-caret-down"></i>
+                        </svg> 
+                        <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
                         <a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a>
@@ -54,31 +79,38 @@
                         <button class="dropbtn" id="signOutButtonDropdown">Sign out</button>
                     </div>
                 </li>
-                <li class="menuButton"><a href="#" id="show-sidebar-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
-                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
-                    </svg></a></li>
+
+                <!-- Mobile hamburger menu button -->
+                <li class="menuButton">
+                    <a href="#" id="show-sidebar-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
+                            <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+                        </svg>
+                    </a>
+                </li>
             </ul>
         </header>
     </nav>
 
-        <div class="about-container">
+    <!-- Main content section -->
+    <div class="about-container">
         <h1>About the product</h1>
 
         <div class="about-content">
+            <!-- Description of the app -->
             <div class="project-description">
                 <p>
-                <strong>EatMeMaybe</strong> is designed to help you keep track of what you have in your pantry, reducing both waste and expenses. Registering your groceries in the app will make it easy to monitor what you have, the quantity and the expiration dates. Whether you’re managing your weekly shopping or keeping an eye on long-term storage, EatMeMaybe helps ensure what you buy gets used in time.
-                </p><br>
-                <p></p>
-                <p>
-                Our algorithm estimates expiration dates based on food category, while the color-coded tracking system helps you stay on top of what’s still fresh. This way nothing goes to waste. Our goal is to make your life easier, while also promoting sustainability through better awareness of expiration dates. The app includes helpful features like filtering your personal inventory, viewing product details, adjusting quantities, and more. <strong>EatMeMaybe</strong> is perfect for students, families, or anyone looking to save money and reduce waste in a smart and easy way.
+                    <strong>EatMeMaybe</strong> is designed to help you keep track of what you have in your pantry, reducing both waste and expenses. Registering your groceries in the app will make it easy to monitor what you have, the quantity and the expiration dates. Whether you’re managing your weekly shopping or keeping an eye on long-term storage, EatMeMaybe helps ensure what you buy gets used in time.
                 </p><br>
                 <p>
-                Still curious? Check out our video and see for yourself.
+                    Our algorithm estimates expiration dates based on food category, while the color-coded tracking system helps you stay on top of what’s still fresh. This way nothing goes to waste. Our goal is to make your life easier, while also promoting sustainability through better awareness of expiration dates. The app includes helpful features like filtering your personal inventory, viewing product details, adjusting quantities, and more. <strong>EatMeMaybe</strong> is perfect for students, families, or anyone looking to save money and reduce waste in a smart and easy way.
+                </p><br>
+                <p>
+                    Still curious? Check out our video and see for yourself.
                 </p>
             </div>
 
+            <!-- Embedded YouTube video -->
             <div class="video-wrapper">
                 <iframe
                     src="https://www.youtube.com/embed/VIDEO_ID"
@@ -90,6 +122,7 @@
         </div>
     </div>
 
+    <!-- Scripts for functionality -->
     <script type="module" src="JS/authHandlers.js"></script>
     <script src="JS/navbar.js"></script>
 </body>
